--- a/PixelSort/app/src/main/res/layout/activity_photos.xml
+++ b/PixelSort/app/src/main/res/layout/activity_photos.xml
@@ -4,129 +4,132 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/trees"
+    android:background="#ECF0F1"
     android:orientation="vertical"
     tools:context=".PhotosActivity">
 
     <LinearLayout
-        android:id="@+id/opacityBackground"
+        android:id="@+id/linearLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#E6333333"
-        android:orientation="vertical"/>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/headernav"
-        android:layout_width="match_parent"
-        android:layout_height="65dp"
-        android:orientation="horizontal"
-        android:background="@drawable/topnavbar"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_height="225dp"
+        android:background="@drawable/page_header"
+        android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <TextView
-            android:id="@+id/headerTitle"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
+            android:layout_marginTop="50dp"
+            android:fontFamily="@font/roboto"
             android:text="Dashboard"
-            android:textSize="26dp"
-            android:textStyle="bold"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/headernav"/>
+            android:textAlignment="center"
+            android:textColor="#ECF0F1"
+            android:textSize="40dp" />
+    </LinearLayout>
 
-        <Button
-            android:id="@+id/sortPhotos"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:background="#26FFFFFF"
-            android:text="Sort Photos"
-            app:backgroundTint="@null"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/profile"
-            app:layout_constraintStart_toEndOf="@+id/headerTitle"
-            app:layout_constraintTop_toTopOf="parent" />
+    <ImageView
+        android:id="@+id/archives"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="40dp"
+        android:layout_marginBottom="40dp"
+        android:background="@drawable/archive_button"
+        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
+        app:layout_constraintStart_toStartOf="parent" />
 
-        <ImageView
-            android:id="@+id/profile"
-            android:layout_width="wrap_content"
-            android:layout_height="40dp"
-            android:layout_marginRight="16dp"
-            android:gravity="end"
-            app:srcCompat="@drawable/icon_profile"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@+id/headernav"/>
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    <ImageView
+        android:id="@+id/profile"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="40dp"
+        android:layout_marginBottom="40dp"
+        android:background="@drawable/profile_button"
+        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <Button
+        android:id="@+id/sortPhotos"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="10dp"
+        android:text="Sort Photos"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
-        android:id="@+id/footernav"
+        android:id="@+id/navbar"
         android:layout_width="match_parent"
-        android:layout_height="65dp"
-        android:orientation="horizontal"
-        android:background="@drawable/bottomnavbar"
+        android:layout_height="90dp"
+        android:background="@drawable/navbar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/photos"
             android:layout_width="wrap_content"
-            android:layout_height="55dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginLeft="40dp"
-            android:layout_weight="1"
-            app:srcCompat="@drawable/icon_photos" />
+            android:layout_height="wrap_content"
+            android:background="@drawable/photos"
+            android:layout_marginLeft="50dp"
+            android:layout_marginTop="20dp"/>
+
         <ImageView
             android:id="@+id/search"
             android:layout_width="wrap_content"
-            android:layout_height="55dp"
-            android:layout_weight="1"
-            android:layout_marginTop="5dp"
-            android:layout_marginLeft="40dp"
-            android:layout_marginRight="40dp"
-            app:srcCompat="@drawable/icon_search" />
+            android:layout_height="wrap_content"
+            android:background="@drawable/search"
+            android:layout_marginLeft="80dp"
+            android:layout_marginRight="65dp"
+            android:layout_marginTop="20dp"/>
+
         <ImageView
             android:id="@+id/albums"
             android:layout_width="wrap_content"
-            android:layout_height="55dp"
-            android:layout_weight="1"
-            android:layout_marginTop="5dp"
-            android:layout_marginRight="40dp"
-            app:srcCompat="@drawable/icon_albums" />
+            android:layout_height="wrap_content"
+            android:background="@drawable/albums"
+            android:layout_marginRight="50dp"
+            android:layout_marginTop="20dp"/>
     </LinearLayout>
 
-    <Button
-        android:id="@+id/addPhoto"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:text="Add Photos"
-        app:backgroundTint="@null"
-        android:background="#26FFFFFF"
-        app:layout_constraintTop_toBottomOf="@+id/headernav"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-
-    <ProgressBar
-        android:id="@+id/imageProgress"
+    <ImageView
+        android:id="@+id/currentPage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@+id/footernav"
-        app:layout_constraintEnd_toEndOf="@+id/recyclerGalleryImages"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/addPhoto" />
+        android:layout_marginStart="50dp"
+        android:background="@drawable/current_page"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerGalleryImages"
-        android:layout_below="@+id/addPhoto"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:padding="6dp"
-        app:layout_constraintTop_toBottomOf="@id/addPhoto"
-        app:layout_constraintBottom_toTopOf="@id/footernav" />
+        app:layout_constraintBottom_toTopOf="@+id/navbar"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
+
+    <ImageView
+        android:id="@+id/addPhoto"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="192dp"
+        android:background="@drawable/add_photo"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ProgressBar
+        android:id="@+id/imageProgress"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="@+id/recyclerGalleryImages"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/addPhoto" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
