--- a/PixelSort/app/src/main/res/layout/activity_register.xml
+++ b/PixelSort/app/src/main/res/layout/activity_register.xml
@@ -4,15 +4,72 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/trees"
+    android:background="#ECF0F1"
     tools:context=".RegisterActivity">
 
     <LinearLayout
         android:id="@+id/opacityBackground"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#2Fbdc3c7"
-        android:orientation="vertical"></LinearLayout>
+        android:layout_height="200dp"
+        android:background="@drawable/page_header"
+        android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"></LinearLayout>
+
+    <ImageView
+        android:id="@+id/title"
+        android:layout_width="wrap_content"
+        android:layout_height="136dp"
+        android:background="@drawable/title"
+        app:layout_constraintBottom_toTopOf="@+id/designBar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/opacityBackground" />
+
+    <ImageView
+        android:id="@+id/designBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:background="@drawable/design_bar"
+        app:layout_constraintBottom_toBottomOf="@+id/opacityBackground"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <LinearLayout
+        android:id="@+id/loginArea"
+        android:layout_width="wrap_content"
+        android:layout_height="96dp"
+        android:layout_marginTop="15dp"
+        android:background="@drawable/input_header"
+        android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/opacityBackground">
+
+        <TextView
+            android:id="@+id/loginText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="10dp"
+            android:fontFamily="@font/roboto"
+            android:text="Register"
+            android:textColor="#34495E"
+            android:textSize="28dp" />
+
+        <TextView
+            android:id="@+id/loginDescriptionText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="5dp"
+            android:fontFamily="@font/roboto_regular"
+            android:text="Create your account"
+            android:textColor="#34495E"
+            android:textSize="20dp" />
+    </LinearLayout>
 
     <TextView
         android:id="@+id/registerBack"
@@ -26,191 +83,127 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"/>
 
-    <LinearLayout
-        android:id="@+id/title"
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/nameText"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:gravity="center_horizontal"
-        android:layout_marginTop="60dp"
-        android:layout_marginBottom="60dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/opacityBackground2"
+        android:layout_marginTop="10dp"
+        android:fontFamily="@font/roboto_regular"
+        android:text="YOUR NAME"
+        android:textColor="#34495E"
+        android:textSize="20dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintHorizontal_bias="0.13"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/loginArea" />
 
-        <TextView
-            android:id="@+id/pixelSort"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="PixelSort"
-            android:textSize="40dp"
-            android:textColor="@color/black" />
-        <View
-            android:id="@+id/line1"
-            android:background="#000000"
-            android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:layout_marginBottom="10dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginRight="25dp"
-            android:layout_marginLeft="25dp" />
+    <EditText
+        android:id="@+id/name"
+        android:layout_width="332dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/nameText"
+        android:layout_alignParentLeft="true"
+        android:layout_marginTop="5dp"
+        android:background="@drawable/input"
+        android:ems="10"
+        android:fontFamily="@font/roboto_regular"
+        android:hint="John Doe"
+        android:inputType="textPersonName"
+        android:padding="10dp"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.506"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/nameText" />
 
-        <TextView
-            android:id="@+id/photoOrganizer"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Photo Organizer"
-            android:textSize="25dp"
-            android:textColor="@color/black" />
-    </LinearLayout>
+    <TextView
+        android:id="@+id/emailText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:fontFamily="@font/roboto_regular"
+        android:text="YOUR EMAIL"
+        android:textColor="#34495E"
+        android:textSize="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.125"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/name" />
 
-    <LinearLayout
-        android:id="@+id/opacityBackground2"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:background="#8F000000"
-        android:orientation="vertical"
-        app:layout_constraintTop_toBottomOf="@id/title"
-        app:layout_constraintBottom_toBottomOf="parent">
+    <EditText
+        android:id="@+id/email"
+        android:layout_width="332dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:background="@drawable/input"
+        android:ems="10"
+        android:fontFamily="@font/roboto_regular"
+        android:hint="email@photo.com"
+        android:inputType="textEmailAddress"
+        android:padding="10dp"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.493"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/emailText" />
 
-        <TextView
-            android:id="@+id/register"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/photoOrganizer"
-            android:layout_alignParentLeft="true"
-            android:layout_marginLeft="40dp"
-            android:layout_marginTop="20dp"
-            android:text="Register"
-            android:textColor="@color/white"
-            android:textSize="25dp" />
+    <TextView
+        android:id="@+id/passwordText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="36dp"
+        android:layout_marginTop="10dp"
+        android:fontFamily="@font/roboto_regular"
+        android:text="PASSWORD"
+        android:textColor="#34495E"
+        android:textSize="20dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/email" />
 
-        <TextView
-            android:id="@+id/registerDescriptionText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/login"
-            android:layout_alignParentLeft="true"
-            android:layout_marginLeft="40dp"
-            android:layout_marginTop="10dp"
-            android:text="Create your account"
-            android:textColor="@color/white"
-            android:textSize="18dp" />
-
-        <TextView
-            android:id="@+id/nameText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/loginDescriptionText"
-            android:layout_alignParentLeft="true"
-            android:layout_marginLeft="30dp"
-            android:layout_marginTop="30dp"
-            android:text="YOUR NAME"
-            android:textColor="@color/white"
-            android:textSize="18dp" />
-
-        <EditText
-            android:id="@+id/name"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/nameText"
-            android:layout_alignParentLeft="true"
-            android:layout_marginLeft="30dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginRight="30dp"
-            android:background="#7F000000"
-            android:ems="10"
-            android:inputType="textPersonName"
-            android:padding="10dp"
-            android:hint="John Doe"
-            android:textColorHint="@color/white"
-            android:textColor="@color/white" />
-
-        <TextView
-            android:id="@+id/emailText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/name"
-            android:layout_alignParentLeft="true"
-            android:layout_marginLeft="30dp"
-            android:layout_marginTop="30dp"
-            android:text="EMAIL"
-            android:textColor="@color/white"
-            android:textSize="18dp" />
-
-        <EditText
-            android:id="@+id/email"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/emailText"
-            android:layout_alignParentLeft="true"
-            android:layout_marginLeft="30dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginRight="30dp"
-            android:background="#7F000000"
-            android:ems="10"
-            android:inputType="textEmailAddress"
-            android:padding="10dp"
-            android:hint="email@photo.com"
-            android:textColorHint="@color/white"
-            android:textColor="@color/white" />
-
-        <TextView
-            android:id="@+id/passwordText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/email"
-            android:layout_alignParentLeft="true"
-            android:layout_marginLeft="30dp"
-            android:layout_marginTop="30dp"
-            android:text="PASSWORD"
-            android:textColor="@color/white"
-            android:textSize="18dp" />
-
-        <EditText
-            android:id="@+id/password"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/passwordText"
-            android:layout_alignParentLeft="true"
-            android:layout_marginLeft="30dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginRight="30dp"
-            android:background="#7F000000"
-            android:ems="10"
-            android:inputType="textPassword"
-            android:padding="10dp"
-            android:hint="password1"
-            android:textColorHint="@color/white"
-            android:textColor="@color/white" />
-    </LinearLayout>
+    <EditText
+        android:id="@+id/password"
+        android:layout_width="332dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:background="@drawable/input"
+        android:ems="10"
+        android:fontFamily="@font/roboto_regular"
+        android:hint="password"
+        android:inputType="textPassword"
+        android:padding="10dp"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.493"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/passwordText" />
 
     <TextView
         android:id="@+id/availableAccount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="15dp"
         android:text="I have an account"
-        android:textColor="@color/white"
+        android:textColor="#34495E"
         android:textSize="18dp"
-        app:layout_constraintBottom_toTopOf="@id/signUp"
+        android:fontFamily="@font/roboto"
+        app:layout_constraintBottom_toTopOf="@+id/signUp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <Button
+    <ImageView
         android:id="@+id/signUp"
-        android:layout_width="wrap_content"
+        android:layout_width="315dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:width="400dp"
-        android:height="75dp"
-        android:backgroundTint="#FFFFFF"
-        android:text="Register"
-        android:textColor="#000000"
-        android:textSize="20dp"
+        android:layout_marginBottom="30dp"
+        android:background="@drawable/register2"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.541"
         app:layout_constraintStart_toStartOf="parent" />
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
