--- a/PixelSort/app/src/main/res/layout/album_item.xml
+++ b/PixelSort/app/src/main/res/layout/album_item.xml
@@ -2,20 +2,20 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_width="175dp"
+    android:layout_height="175dp"
     android:layout_gravity="center"
     android:layout_margin="3dp"
     android:elevation="16dp"
     app:cardCornerRadius="10dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_height="match_parent"
-        android:layout_width="match_parent">
+        android:layout_height="175dp"
+        android:layout_width="175dp">
 
         <ImageView
             android:id="@+id/filterImage"
-            android:layout_width="match_parent"
+            android:layout_width="175dp"
             android:layout_height="175dp"
             android:layout_gravity="center"
             android:background="#70bdc3c7"
@@ -40,7 +40,7 @@
 
         <ImageView
             android:id="@+id/albumImage"
-            android:layout_width="match_parent"
+            android:layout_width="175dp"
             android:layout_height="175dp"
             android:layout_gravity="center"
             android:scaleType="centerCrop"
