--- a/PixelSort/app/src/main/res/layout/activity_albums.xml
+++ b/PixelSort/app/src/main/res/layout/activity_albums.xml
@@ -52,7 +52,7 @@
     <LinearLayout
         android:id="@+id/footernav"
         android:layout_width="match_parent"
-        android:layout_height="90dp"
+        android:layout_height="70dp"
         android:background="@drawable/navbar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -65,7 +65,7 @@
             android:layout_height="wrap_content"
             android:background="@drawable/photos"
             android:layout_marginLeft="50dp"
-            android:layout_marginTop="20dp"/>
+            android:layout_gravity="center"/>
 
         <ImageView
             android:id="@+id/search"
@@ -74,21 +74,21 @@
             android:background="@drawable/search"
             android:layout_marginLeft="80dp"
             android:layout_marginRight="65dp"
-            android:layout_marginTop="20dp"/>
+            android:layout_gravity="center"/>
 
         <ImageView
             android:id="@+id/albums"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/albums"
+            android:background="@drawable/albums_filled"
             android:layout_marginRight="50dp"
-            android:layout_marginTop="20dp"/>
+            android:layout_gravity="center"/>
     </LinearLayout>
 
     <ImageView
         android:id="@+id/currentPage"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="7dp"
         android:layout_marginStart="297dp"
         android:background="@drawable/current_page"
         app:layout_constraintBottom_toBottomOf="parent"
