--- a/PixelSort/app/src/main/res/layout/activity_photos.xml
+++ b/PixelSort/app/src/main/res/layout/activity_photos.xml
@@ -21,7 +21,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="60dp"
             android:fontFamily="@font/roboto"
             android:text="Dashboard"
             android:textAlignment="center"
@@ -29,12 +29,38 @@
             android:textSize="40dp" />
     </LinearLayout>
 
+    <LinearLayout
+        android:id="@+id/selectOptions"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:background="#E934495E"
+        android:visibility="gone"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
+
+        <Button
+            android:id="@+id/removeSelection"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#34495e"
+            android:text="Cancel"
+            android:layout_gravity="center"
+            android:layout_marginRight="10dp"/>
+    </LinearLayout>
+
     <ImageView
         android:id="@+id/archives"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
-        android:layout_marginBottom="40dp"
+        android:layout_marginBottom="30dp"
         android:background="@drawable/archive_button"
         app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
         app:layout_constraintStart_toStartOf="parent" />
@@ -44,27 +70,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="40dp"
-        android:layout_marginBottom="40dp"
+        android:layout_marginBottom="30dp"
         android:background="@drawable/profile_button"
         app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
         app:layout_constraintEnd_toEndOf="parent" />
-
-    <Button
-        android:id="@+id/sortPhotos"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="10dp"
-        android:text="Sort Photos"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/selectPhotos"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         android:backgroundTint="#34495e"
         android:text="Select"
         app:layout_constraintStart_toStartOf="parent"
@@ -73,7 +89,7 @@
     <LinearLayout
         android:id="@+id/navbar"
         android:layout_width="match_parent"
-        android:layout_height="90dp"
+        android:layout_height="70dp"
         android:background="@drawable/navbar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -84,9 +100,9 @@
             android:id="@+id/photos"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/photos"
+            android:background="@drawable/photos_filled"
             android:layout_marginLeft="50dp"
-            android:layout_marginTop="20dp"/>
+            android:layout_gravity="center"/>
 
         <ImageView
             android:id="@+id/search"
@@ -95,7 +111,7 @@
             android:background="@drawable/search"
             android:layout_marginLeft="80dp"
             android:layout_marginRight="65dp"
-            android:layout_marginTop="20dp"/>
+            android:layout_gravity="center"/>
 
         <ImageView
             android:id="@+id/albums"
@@ -103,13 +119,13 @@
             android:layout_height="wrap_content"
             android:background="@drawable/albums"
             android:layout_marginRight="50dp"
-            android:layout_marginTop="20dp"/>
+            android:layout_gravity="center"/>
     </LinearLayout>
 
     <ImageView
         android:id="@+id/currentPage"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="7dp"
         android:layout_marginStart="50dp"
         android:background="@drawable/current_page"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -121,68 +137,88 @@
         android:layout_height="0dp"
         android:padding="6dp"
         app:layout_constraintBottom_toTopOf="@+id/navbar"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
+        app:layout_constraintVertical_bias="0.0"
+        tools:layout_editor_absoluteX="0dp" />
 
     <LinearLayout
         android:id="@+id/deleteOptions"
-        android:layout_width="300dp"
-        android:layout_height="50dp"
-        android:layout_marginBottom="10dp"
-        android:background="#34495E"
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        android:background="#E934495E"
         android:visibility="gone"
-        app:layout_constraintBottom_toTopOf="@+id/navbar"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="@+id/navbar"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:orientation="horizontal">
+        app:layout_constraintStart_toStartOf="parent">
 
-        <Button
+        <LinearLayout
             android:id="@+id/deletePhotos"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Delete"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="86dp"/>
+            android:background="#F934495E"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp"
+            android:orientation="vertical"
+            android:layout_marginLeft="40dp"
+            android:layout_gravity="center">
 
-        <Button
-            android:id="@+id/removeSelection"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="x"
-            android:layout_marginRight="20dp"/>
+            <ImageView
+                android:id="@+id/deleteImage"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center"
+                android:background="@drawable/ic_baseline_delete_outline_24" />
 
+            <TextView
+                android:id="@+id/deleteText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Delete"
+                android:textColor="#ECF0F1"
+                android:fontFamily="@font/roboto"/>
+        </LinearLayout>
     </LinearLayout>
 
     <ImageView
         android:id="@+id/addPhoto"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="192dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
         android:background="@drawable/add_photo"
+        app:layout_constraintBottom_toTopOf="@+id/navbar"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <ImageView
+        android:id="@+id/sortPhotos"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="44dp"
+        android:background="@drawable/sort_icon"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/qualityCheck" />
 
     <CheckBox
         android:id="@+id/qualityCheck"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="33dp"
         android:text="Remove Low Quality Images"
         android:textColor="#e8e8e8"
         app:layout_constraintBottom_toTopOf="@+id/profile"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/linearLayout"
-        app:layout_constraintTop_toBottomOf="@+id/sortPhotos" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <ProgressBar
         android:id="@+id/imageProgress"
         style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="@+id/recyclerGalleryImages"
+        app:layout_constraintBottom_toTopOf="@+id/navbar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/addPhoto" />
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
