--- a/PixelSort/app/src/main/res/layout/activity_profile.xml
+++ b/PixelSort/app/src/main/res/layout/activity_profile.xml
@@ -54,7 +54,7 @@
     <LinearLayout
         android:id="@+id/footernav"
         android:layout_width="match_parent"
-        android:layout_height="90dp"
+        android:layout_height="70dp"
         android:background="@drawable/navbar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -67,7 +67,7 @@
             android:layout_height="wrap_content"
             android:background="@drawable/photos"
             android:layout_marginLeft="50dp"
-            android:layout_marginTop="20dp"/>
+            android:layout_gravity="center"/>
 
         <ImageView
             android:id="@+id/search"
@@ -76,7 +76,7 @@
             android:background="@drawable/search"
             android:layout_marginLeft="80dp"
             android:layout_marginRight="65dp"
-            android:layout_marginTop="20dp"/>
+            android:layout_gravity="center"/>
 
         <ImageView
             android:id="@+id/albums"
@@ -84,7 +84,7 @@
             android:layout_height="wrap_content"
             android:background="@drawable/albums"
             android:layout_marginRight="50dp"
-            android:layout_marginTop="20dp"/>
+            android:layout_gravity="center"/>
     </LinearLayout>
 
     <LinearLayout
